# AlgEditor

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
libs/logic/: CMakeLists.txt
libs/logic/include/: curved_lines_draw_algs.h  first_rank_lines.h  funcs.h  interpolation.h  line_drawing_algs.h  obj_3D.h  polygon.h  polygon_fill.h  polygonalisation.h  second_rank_lines.h  transformations.h
libs/logic/src/: curved_lines_draw_algs.cpp  first_rank_lines.cpp  funcs.cpp  interpolation.cpp  line_drawing_algs.cpp  obj_3D.cpp  polygon.cpp  polygon_fill.cpp  polygonalisation.cpp  second_rank_lines.cpp  transformations.cpp
libs/metadata/: CMakeLists.txt
libs/metadata/include/: data_definitions.h  figure_class.h  misc.h  tools.h  vars.h
libs/metadata/src/: data_definitions.cpp  figure_class.cpp  misc.cpp  tools.cpp
libs/model/: CMakeLists.txt
libs/model/include/: data_handler.h  debugger.h
libs/model/src/: data_handler.cpp  debugger.cpp
libs/view/: CMakeLists.txt
libs/view/include/: canvas.h  window.h
libs/view/src/: canvas.cpp  window.cpp
src/: main.cpp
